--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
   <header>
-    <h1 class="title">Dawger - Twitter for Dawgs 🐶</h1>
+    <h1 class="title">Dawger - Twitter for Dawgs</h1>
+    <h1 class="title dog-icon">🐶</h1>
   </header>
   <main>
     <form class="woof-form">
@@ -18,17 +21,22 @@
       </div>
       <label for="name">Name</label>
       <input class="u-full-width" type="text" id="name" name="name">
-      <label for="content">Woof</label>
+      <label for="content" class="funny">Woof</label>
       <textarea class="u-full-width" type="text" id="content" name="content"></textarea>
       <button class="button-primary">Send Your Woof 🐕</button>
     </form>
     <div class="loading">
       <img src="loading.gif" alt="">
+      <!-- <img src="https://cdn.glitch.com/77a0a5e2-720b-4336-a566-471cbe64ba42%2Floading.gif?1539326110053" alt=""> -->
     </div>
     <div class="woofs">
 
     </div>
   </main>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js" integrity="sha256-T0Vest3yCU7pafRw9r+settMBX6JkKN06dqBnpQ8d30=" crossorigin="anonymous"></script>
+
   <script src="client.js"></script>
 </body>
 </html>
